# xclim

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pylintrc.toml  .readthedocs.yml  .travis.yml  .yamllint.yaml  .zenodo.json  .zizmor.yml  AGENTS.md  AI_POLICY.md  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  _static  azure-pipelines.yml  environment-dev.yml  environment-docs.yml  environment.yaml  environment.yml  paper.bib  paper.md  pre-build.py  pylintrc  pyproject.toml  readthedocs_environment.yml  requirements.txt  requirements_dev.txt  (+9 more)
.binder/: download_cccma.py  environment.yml  postBuild  start
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  TOOT_TEMPLATE.md  dependabot.yml  labaeler.yml  labeler.yml  publish-mastodon-template.md
.github/DISCUSSION_TEMPLATE/: questions.yml  translations.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question_support.md
.github/workflows/: actions-versions-updater.yml  add-to-project.yml  additional_tests.yml  auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  doctests.yml  draft-pdf.yml  first-pull-request.yml  first_pull_request.yml  label-on-approval.yml  label.yml  label_on_approval.yml  main.yml  on_approval.yml  publish-mastodon.template.md  publish-mastodon.yml  publish-pypi.yml  scorecard.yml  sdba-warning.yml  tag-testpypi.yml  testdata-version.yml  testdata_version.yml  upstream.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt  requirements_upstream.txt
dcvar/: __init__.py  checks.py  hydro.py  icclim.py  stats.py
docs/: Makefile  Untitled.ipynb  analogues.rst  anuclim.rst  api.rst  api_indicators.rst  autodoc_indicator.py  bibliography.rst  checks.rst  conf.py  downscaling.rst  downscaling_api.rst  explanation.rst  icclim.rst  index.rst  indicators.rst  indicators_api.rst  indices.rst  installation.rst  internationalization.rst  itable.py  itable.rst  make.bat  modules.rst  pcc.rst  readme.rst  references.bib  references.rst  rstjinja.py  rtd_requirements.txt  sdba.rst  sdba_api.rst  security.rst  support.rst  usage.rst  utilities.rst  xclim.atmos.rst  xclim.indices.fire.rst  xclim.indices.rst  xclim.land.rst  (+3 more)
docs/_static/: indsearch.js  style.css  xarray.css
docs/_templates/: base.html  layout.html
docs/notebooks/: PB_01_xclim_Software_ecosystem_for_climate_services.ipynb  Subsetting with xclim.ipynb  Workflow example (xclim, xarray and dask).ipynb  _finder.py  analogs.ipynb  ausage.ipynb  cli.ipynb  customize.ipynb  ensembles-advanced.ipynb  ensembles.ipynb  example.fr.json  example.ipynb  example.py  example.yml  extendxclim.ipynb  frequency_analysis.ipynb  index.rst  mappings.ipynb  options.ipynb  partitioning.ipynb  sdba-advanced.ipynb  sdba-speed.ipynb  sdba.ipynb  subset.ipynb  units.ipynb  usage.ipynb
docs/paper/: paper.bib  tmp_saved_input_paper.bib
hailstorm/: __init__.py  checks.py  hydro.py  icclim.py  stats.py
paper/: paper.bib  paper.md
src/xclim/: __init__.py  analog.py  cli.py  sdba.py  solar.py
tests/: common.py  conftest.py  data.py  test_analog.py  test_atmos.py  test_bc.py  test_bootstrapping.py  test_calendar.py  test_cffwis.py  test_checks.py  test_cli.py  test_converters.py  test_dcvar.py  test_ensembles.py  test_ffdi.py  test_flags.py  test_formatting.py  test_fwi.py  test_generic.py  test_generic_indicators.py  test_hailstorm.py  test_helpers.py  test_hydrology.py  test_icclim.py  test_indicators.py  test_indices.py  test_land.py  test_locales.py  test_missing.py  test_modules.py  test_options.py  test_partitioning.py  test_precip.py  test_preciptemp.py  test_reducers.py  test_run_length.py  test_seaice.py  test_snow.py  test_solar.py  test_stats.py  (+10 more)
tests/downscaling/: conftest.py  diagnostics.py  test_base.py  test_correction.py  test_detrending.py  test_dqm.py  test_eqm.py  test_examples.py  test_loci.py  test_processing.py  test_qdm.py  test_scaling.py  test_utils.py  utils.py
tests/sdba/: conftest.py  test_adjustment.py  test_detrending.py  test_processing.py  test_properties.py  test_utils.py  utils.py
tests/test_sdba/: conftest.py  diagnostics.py  test_adjustment.py  test_base.py  test_detrending.py  test_loess.py  test_measures.py  test_nbutils.py  test_processing.py  test_properties.py  test_sdba_utils.py  test_utils.py  utils.py
tests/testdata/: meridian.json  meridian_multi.json
xclim/: __init__.py  _scripting.py  analog.py  checks.py  cindices.py  cli.py  conftest.py  ensembles.py  generic.py  hydro.py  icclim.py  indicator.py  indices.py  precip.py  robustness.py  run_length.py  stats.py  streamflow.py  subset.py  temperature.py  utils.py  xclim.py
xclim/atmos/: __init__.py  _precip.py  _temperature.py
xclim/bc/: __init__.py  qm.py
xclim/core/: __init__.py  _exceptions.py  _types.py  base.py  bootstrap_config.py  bootstrapping.py  calendar.py  cfchecks.py  checks.py  datachecks.py  dataflags.py  formatting.py  indicator.py  locales.py  missing.py  options.py  percentile_config.py  units.py  utils.py  yaml.py
xclim/data/: __init__.py  anuclim.yml  cf.yml  fr.json  icclim.yaml  icclim.yml  metpy.yml  schema.yml  variables.yml
xclim/downscaling/: __init__.py  base.py  correction.py  detrending.py  dqm.py  eqm.py  examples.py  grouping.py  loci.py  mapping.py  methods.py  pipeline.py  processing.py  qdm.py  scaling.py  temp.py  utils.py
xclim/ensembles/: __init__.py  _base.py  _filters.py  _partitioning.py  _reduce.py  _robustness.py  base.py  reduce.py  robustness.py
xclim/indicators/: __init__.py  indicator.py  utils.py
xclim/indices/: __init__.py  _agro.py  _anuclim.py  _conversion.py  _helpers.py  _hydrology.py  _multivariate.py  _simple.py  _streamflow_flow_indices.py  _synoptic.py  _threshold.py  (+10 more)
(+258 files in other folders)
