[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xclim"
authors = [
  {name = "Travis Logan", email = "logan.travis@ouranos.ca"}
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9.0"
keywords = ["xclim", "xarray", "climate", "climatology", "bias correction", "ensemble", "indicators", "analysis"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["description", "version"]
dependencies = [
  "boltons>=20.1",
  "bottleneck>=1.3.1",
  # cf-xarray is differently named on conda-forge
  "cf-xarray>=0.6.1",
  "cftime>=1.4.1",
  "Click>=8.1",
  "dask[array]>=2.6",
  "jsonpickle",
  "numba",
  "numpy>=1.20.0",
  "pandas>=2.2",
  "pint>=0.10",
  "pyarrow", # Strongly encouraged for pandas v2.2.0+
  "pyyaml",
  "scikit-learn>=0.21.3",
  "scipy>=1.9.0",
  "statsmodels",
  "xarray>=2023.11.0",
  "yamale"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "black[jupyter] ==24.4.2",
  "blackdoc ==0.3.9",
  "bump-my-version >=0.17.1",
  "codespell",
  "coverage[toml]",
  "flake8",
  "flake8-alphabetize",
  "flake8-rst-docstrings",
  "h5netcdf",
  "ipython",
  "isort ==5.13.2",
  "mypy",
  "nbconvert <7.14", # Pinned due to directive errors in sphinx. See: https://github.com/jupyter/nbconvert/issues/2092
  "nbqa",
  "nbval",
  "netCDF4 >=1.4",
  "pandas-stubs>=2.2",
  "platformdirs >=3.2",
  "pre-commit >=2.9",
  "pybtex",
  "pylint",
  "pytest <8.0", # Pinned due to breakage with xdoctest. See: https://github.com/Erotemic/xdoctest/issues/151
  "pytest-cov",
  "pytest-socket",
  "pytest-xdist[psutil] >=3.2",
  "ruff >=0.3.0",
  "tokenize-rt",
  "tox >=4.5",
  # "tox-conda",  # Will be added when a tox@v4.0+ compatible plugin is released.
  "tox-gh >=1.3.1",
  "vulture ==2.11",
  "xdoctest",
  "yamllint==1.35.1",
  # Documentation and examples
  "distributed >=2.0",
  "furo >=2023.9.10",
  "ipykernel",
  "matplotlib",
  "nbsphinx",
  "nc-time-axis",
  "pooch",
  "sphinx",
  "sphinx-autobuild >=2024.4.16",
  "sphinx-autodoc-typehints",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-mdinclude",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-svg2pdfconverter[Cairosvg]"
]

[project.scripts]
xclim = "xclim.cli:cli"

[project.urls]
"Homepage" = "https://xclim.readthedocs.io/"
"Source" = "https://github.com/Ouranosinc/xclim/"
"Changelog" = "https://xclim.readthedocs.io/en/stable/history.html"
"Issue tracker" = "https://github.com/Ouranosinc/xclim/issues"
"About Ouranos" = "https://www.ouranos.ca/en/"

[tool]

[tool.black]
target-version = [
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.49.0"
commit = true
commit_args = "--no-verify"
tag = false
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "xclim/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
skip = 'xclim/data/*.json,docs/_build,docs/notebooks/xclim_training/*.ipynb,docs/references.bib,__pycache__,*.nc,*.png,*.gz,*.whl'
ignore-words-list = "absolue,astroid,bloc,bui,callendar,degreee,environnement,hanel,inferrable,lond,nam,nd,ressources,sie,vas"

[tool.coverage.run]
relative_files = true
omit = ["tests/*.py"]

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "CHANGES.rst",
  "CITATION.cff",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "docs/**/*.gif",
  "docs/**/*.jpg",
  "docs/**/*.png",
  "docs/**/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "docs/notebooks/_finder.py",
  "requirements_upstream.txt",
  "tests/**/*.py",
  "tests/**/*.txt",
  "tox.ini",
  "xclim/**/*.json",
  "xclim/**/*.py",
  "xclim/**/*.txt",
  "xclim/**/*.yml"
]
exclude = [
  "**/*.py[co]",
  "**/__pycache__",
  ".*",
  "docs/_*",
  "docs/modules.rst",
  "docs/paper/*",
  "docs/xclim*.rst",
  "pylintrc"
]

[tool.isort]
profile = "black"
py_version = 39
append_only = true
add_imports = "from __future__ import annotations"

[tool.mypy]
python_version = 3.9
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
  "boltons.*",
  "cftime.*",
  "jsonpickle.*",
  "numba.*",
  "pytest_socket.*",
  "SBCK.*",
  "scipy.*",
  "sklearn.*",
  "statsmodels.*",
  "yamale.*",
  "yaml.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal"
]
norecursedirs = ["docs/notebooks/*"]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests tests/test_sdba"
usefixtures = "xdoctest_namespace"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "NUMBER", "ELLIPSIS"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "requires_docs: mark tests that can only be run with documentation present (deselect with '-m \"not requires_docs\"')",
  "requires_internet: mark tests that require internet access (deselect with '-m \"not requires_internet\"')"
]

[tool.ruff]
src = ["xclim"]
line-length = 150
target-version = "py39"
exclude = [
  ".git",
  "docs",
  "build",
  ".eggs"
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
ignore = [
  "D205",
  "D400",
  "D401"
]
select = [
  "C9",
  "D",
  "E",
  "F",
  "N802",
  "W"
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-import-conventions.aliases]
"matplotlib.pyplot" = "plt"
"xclim.indices" = "xci"
numpy = "np"
pandas = "pd"
scipy = "sp"
xarray = "xr"

[tool.ruff.lint.isort]
known-first-party = ["xclim"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 1
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D100", "D101", "D102", "D103"]
"tests/*.py" = ["D100", "D101", "D102", "D103", "N802"]
"xclim/**/__init__.py" = ["F401", "F403"]
"xclim/core/indicator.py" = ["D214", "D405", "D406", "D407", "D411"]
"xclim/core/locales.py" = ["E501", "W505"]
"xclim/core/missing" = ["D103"]
"xclim/indices/_agro.py" = ["E501"]
"xclim/indices/fire/_cffwis.py" = ["D103"]
"xclim/sdba/utils.py" = ["D103"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["xclim", "tests"]
sort_by_size = true
